made modifactions to build script so it will build for familywishlist.name

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "family-wishlist",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://familygifts.name",  
   "dependencies": {
     "axios": "^0.19.2",
     "react": "^16.10.2",
